# StaticOpenGL

./: CMakeLists.txt  main.cpp  shader_resources.h.in
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: fragment.glsl  vertex.glsl
